Add ServerRole var to denote what type of DNS configuration to use.

--- a/roles/bind/defaults/main.yml
+++ b/roles/bind/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
   BindConfigFile: /etc/named.conf
+  # options: recursive, primary, secondary
+  ServerRole: recursive
   # options are bind-dev, bind (stable version), bind-esv (extended support)
   BindRelease: "bind"
   # Seperate IP address entries with semi colons ';'. Last entry must terminate with a ';'
