--- a/roles/bind/tasks/main.yml
+++ b/roles/bind/tasks/main.yml
@@ -18,28 +18,27 @@
       state: latest
     tags: isc-bind
 #
-  - name: Configure BIND Config file for CentOS 7 (and lower)
-    template:
-      src: "{{ ServerRole }}-named.conf.j2"
-      dest: /etc/opt/isc/isc-bind/named.conf
-      group: named
-      backup: yes
+  - name: set paths for RHEL7
+    vars:
+      confpath: "{{ confpathrhel7 }}"
+      datapath: "{{ datapathrhel7 }}"
     when:
-      - ansible_facts['distribution'] == "CentOS"
+      - ansible_facts['os_family'] == 'RedHat'
       - ansible_facts['distribution_major_version'] == "7"
-    tags: isc-bind
-    notify: restart isc-bind
+  - name: set paths for RHEL8
+    vars:
+      confpath: "{{ confpathrhel8 }}"
+      datapath: "{{ datapathrhel8 }}"
+    when:
+      - ansible_facts['os_family'] == 'RedHat'
+      - ansible_facts['distribution_major_version'] == "8"
 
-
-  - name: Configure BIND Config file for CentOS 8
+  - name: Configure BIND Config file
     template:
       src: "{{ ServerRole }}-named.conf.j2"
-      dest: /etc/opt/isc/scls/isc-bind/named.conf
+      dest: "{{ confpath }}/named.conf"
       group: named
       backup: yes
-    when:
-      - ansible_facts['distribution'] == "CentOS"
-      - ansible_facts['distribution_major_version'] == "8"
     tags: isc-bind
     notify: restart isc-bind
 
