--- a/roles/bind/defaults/main.yml
+++ b/roles/bind/defaults/main.yml
@@ -3,14 +3,13 @@
   # options: recursive, primary, secondary
   #DataDirectory: /var/opt/isc/scls/isc-bind/named/data
   ServerRole: recursive
+  # Directories and files will be set to allow this user read and write access as required
+  binduser: named
   # options are bind-dev, bind (stable version), bind-esv (extended support)
   BindRelease: "bind"
   confpath: /etc/named
   datapath: /var/named
-  confpathrhel8: /etc/opt/isc/scls/isc-bind
-  confpathrhel7: /etc/opt/isc/isc-bind
-  datapathrhel8: /var/opt/isc/scls/isc-bind/named/data
-  datapathrhel7: /var/opt/isc/isc-bind/named/data
+  logpath: /var/log/named
   # Seperate IP address entries with semi colons ';'. Last entry must terminate with a ';'
   ListenV4: "" #"127.0.0.1;"
   ListenV6: "" #"::1;"
