--- a/roles/bind/defaults/main.yml
+++ b/roles/bind/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+  # firewalld zone which will allow DNS through
   firewalldZone: "public"
 
   # options: recursive, primary, secondary
@@ -7,14 +8,21 @@
   binduser: named
   # options are bind-dev, bind (stable version), bind-esv (extended support)
   BindRelease: "bind-dev"
+  # Basic default paths. Note that paths based on distribution version are found in vars/main.yml.
+  # These paths will only apply if no distribution is matched.
   confpath: /etc/named
   datapath: /var/named
+  # Log destination
   logpath: /var/log/named
-  # Seperate IP address entries with semi colons ';'. Last entry must terminate with a ';'
+  # For all ACL vars Seperate IP address entries with semi colons ';'. Last entry must terminate with a ';'
+
+  # If these two vars are left empty only queries will only be possible from the localhost
   ListenV4: "" #"127.0.0.1;"
   ListenV6: "" #"::1;"
+  # Statistics interfaces
   ListenStatsV4: "" #"127.0.0.1;"
   ListenStatsV6: "" #"::1;"
+  # Interface via which rndc can be received
   ListenrndcV4: "" #"127.0.0.1;"
   ListenrndcV6: "" #"::1;"
   TrustedACL: "" #addresses that will be added to the trusted access control list
