Log and handler updates
Logs all use same size and versions.
rndc handlers added.

--- a/roles/bind/handlers/main.yml
+++ b/roles/bind/handlers/main.yml
@@ -4,3 +4,9 @@
     service:
       name: isc-bind-named
       state: restarted
+      
+  - name: reconfig isc-bind
+    shell: rndc reconfig
+
+  - name: reload isc-bind
+    shell: rndc reload
