--- a/roles/bind/handlers/main.yml
+++ b/roles/bind/handlers/main.yml
@@ -4,9 +4,9 @@
     service:
       name: isc-bind-named
       state: restarted
-      
+
   - name: reconfig isc-bind
-    shell: rndc reconfig
+    shell: scl enable isc-bind rndc reconfig
 
   - name: reload isc-bind
-    shell: rndc reload
+    shell: scl enable isc-bind rndc reload
