--- a/roles/bind/tasks/main.yml
+++ b/roles/bind/tasks/main.yml
@@ -81,6 +81,12 @@
       owner: "{{ binduser }}"
       group: "{{ binduser }}"
       mode: 0770
+    file:
+      path: "{{ datapath }}/pri/{{ item }}/keys"
+      state: directory
+      owner: "{{ binduser }}"
+      group: "{{ binduser }}"
+      mode: 0770
     loop: "{{ pri_domains }}"
     when: ServerRole == 'primary'
   - name: Add Primary domain zone files if not present
@@ -93,6 +99,18 @@
       mode: 0660
     loop: "{{ pri_domains }}"
     when: ServerRole == 'primary'
+  - name: Copy Zone statement files for primary domains
+    template:
+      src: local_signed_zone.j2
+      dest: "{{ confpath }}/{{ domain }}.zone.conf"
+      owner: "{{ binduser }}"
+      group: "{{ binduser }}"
+      backup: yes
+      mode: 0660
+    loop: "{{ pri_domains }}"
+    loop_control:
+      loop_var: domain
+      
   - name: Start BIND
     service:
       name: isc-bind-named
