--- a/roles/bind/tasks/pri_dir_setup.yml
+++ b/roles/bind/tasks/pri_dir_setup.yml
@@ -2,14 +2,14 @@
   # set up directories for Primary zone files
   - name: Set up Primary Zone directory
       file:
-        path: "{{ datapath }}/pri/{{ item }}"
+        path: "{{ datapath }}/pri/{{ domain }}"
         state: directory
         owner: "{{ binduser }}"
         group: "{{ binduser }}"
         mode: 0770
   - name: Add keys directory for Primary zones
       file:
-        path: "{{ datapath }}/pri/{{ item }}/keys"
+        path: "{{ datapath }}/pri/{{ domain }}/keys"
         state: directory
         owner: "{{ binduser }}"
         group: "{{ binduser }}"
