--- a/roles/bind/defaults/main.yml
+++ b/roles/bind/defaults/main.yml
@@ -40,12 +40,15 @@
         # green-org: "10.10.0.1; 10.200.0.1;"
   default_ttl: 3600
   soa_values:
-    serial: 1000
+    serial: "{{ ansible_date_time.epoch }}"
     refresh: 14400
     retry: 28800
     expire: 604800
     minimum: 86400
   pri_domains:
-    - example.net
-    - example.info
-    - example.com
+    example.net:
+      isstatic: no
+    example.info:
+      isstatic: no
+    example.com:
+      isstatic: yes
