--- a/roles/bind/tasks/primary.yml
+++ b/roles/bind/tasks/primary.yml
@@ -2,33 +2,29 @@
   - name: Load Primary specific vars
     include_vars: primary.yml
 
-  - name: Add directory for primary zones
+  - name: Add per domain directory for Primary zones. including keys dir.
     file:
-      path: "{{ datapath }}/pri"
+      path: "{{ datapath }}/pri/{{ item }}/keys"
       state: directory
       owner: "{{ binduser }}"
       group: "{{ binduser }}"
       mode: 0770
-
-  - name: Add Primary per domain directories
-    include_tasks: pri_dir_setup.yml
     loop: "{{ pri_domains }}"
-    loop_control:
-      loop_var: domain
 
-  - name: Add Primary domain zone files if not present
+  - name: Add dynamic Primary domain zone files if not present
     template:
-      src: primary.db.j2
-      dest: "{{ datapath }}/pri/{{ item }}/{{ item }}.db"
-      force: no
+      src: {{ lookup('first_found', [ {{ domain }}.db.j2, primary.db.j2] ) }}
+      dest: "{{ datapath }}/pri/{{ domain }}/{{ domain }}.db"
+      force: {{ domain.isstatic }}
       owner: "{{ binduser }}"
       group: "{{ binduser }}"
       mode: 0660
     loop: "{{ pri_domains }}"
+      loop_var: domain
 
-  - name: Copy Zone statement files for primary domains
+  - name: Copy Zone statement files for dynamic primary domains
     template:
-      src: local_signed_zone.j2
+      src: {{ lookup('first_found', [ {{ domain }}.zone.j2, local_signed_zone.j2] ) }}
       dest: "{{ confpath }}/{{ domain }}.zone.conf"
       owner: "{{ binduser }}"
       group: "{{ binduser }}"
