--- a/roles/bind/defaults/main.yml
+++ b/roles/bind/defaults/main.yml
@@ -46,9 +46,9 @@
     expire: 604800
     minimum: 86400
   pri_domains:
-    example.net:
-      isstatic: no
-    example.info:
-      isstatic: no
-    example.com:
-      isstatic: yes
+    - example.net:
+        isstatic: no
+    - example.info:
+        isstatic: no
+    - example.com:
+        isstatic: yes
