--- a/roles/bind/tasks/primary.yml
+++ b/roles/bind/tasks/primary.yml
@@ -4,14 +4,13 @@
 
   - name: Add per domain directory for Primary zones. including keys dir.
     file:
-      path: "{{ datapath }}/pri/{{ item.name }}/keys"
+      path: "{{ datapath }}/pri/{{ item.0 }}/keys"
       state: directory
       owner: "{{ binduser }}"
       group: "{{ binduser }}"
       mode: 0770
     loop: "{{ pri_domains }}"
-    loop_control:
-      label: "{{ item.name }}"
+
 
   - name: Add dynamic Primary domain zone files if not present
     template:
