--- a/roles/bind/tasks/primary.yml
+++ b/roles/bind/tasks/primary.yml
@@ -4,7 +4,7 @@
 
   - name: Add per domain directory for Primary zones. including keys dir.
     file:
-      path: "{{ datapath }}/pri/{{ item.0 }}/keys"
+      path: "{{ datapath }}/pri/{{ item.name }}/keys"
       state: directory
       owner: "{{ binduser }}"
       group: "{{ binduser }}"
@@ -14,24 +14,21 @@
 
   - name: Add dynamic Primary domain zone files if not present
     template:
-      src: "{{ lookup('first_found', [ {{ domain }}.db.j2, primary.db.j2] ) }}"
-      dest: "{{ datapath }}/pri/{{ domain }}/{{ domain }}.db"
-      force: "{{ domain.isstatic }}"
+      src: "{{ lookup('first_found', [ {{ item.name }}.db.j2, primary.db.j2] ) }}"
+      dest: "{{ datapath }}/pri/{{ item.name }}/{{ item.name }}.db"
+      force: "{{ item.isstatic }}"
       owner: "{{ binduser }}"
       group: "{{ binduser }}"
       mode: 0660
     loop: "{{ pri_domains }}"
-    loop_control:
-      loop_var: domain
+
 
   - name: Copy Zone statement files for dynamic primary domains
     template:
-      src: "{{ lookup('first_found', [ {{ domain }}.zone.j2, local_signed_zone.j2] ) }}"
-      dest: "{{ confpath }}/{{ domain }}.zone.conf"
+      src: "{{ lookup('first_found', [ {{ item.name }}.zone.j2, local_signed_zone.j2] ) }}"
+      dest: "{{ confpath }}/{{ item.name }}.zone.conf"
       owner: "{{ binduser }}"
       group: "{{ binduser }}"
       backup: yes
       mode: 0660
     loop: "{{ pri_domains }}"
-    loop_control:
-      loop_var: domain
