--- a/roles/bind/tasks/primary.yml
+++ b/roles/bind/tasks/primary.yml
@@ -14,7 +14,7 @@
 
   - name: Add dynamic Primary domain zone files if not present
     template:
-      src: "{{ lookup('first_found', [ {{ item.name }}.db.j2, primary.db.j2] ) }}"
+      src: "{{ lookup('first_found', [ '{{ item.name }}'.db.j2, primary.db.j2] ) }}"
       dest: "{{ datapath }}/pri/{{ item.name }}/{{ item.name }}.db"
       force: "{{ item.isstatic }}"
       owner: "{{ binduser }}"
@@ -25,7 +25,7 @@
 
   - name: Copy Zone statement files for dynamic primary domains
     template:
-      src: "{{ lookup('first_found', [ {{ item.name }}.zone.j2, local_signed_zone.j2] ) }}"
+      src: "{{ lookup('first_found', [ '{{ item.name }}'.zone.j2, local_signed_zone.j2] ) }}"
       dest: "{{ confpath }}/{{ item.name }}.zone.conf"
       owner: "{{ binduser }}"
       group: "{{ binduser }}"
