--- a/roles/bind/tasks/primary.yml
+++ b/roles/bind/tasks/primary.yml
@@ -31,11 +31,11 @@
     notify: reload isc-bind scl
     register: zone_changes
 
-  #- name: what just changed
-  #  debug: var=zone_changes
+  - name: what just changed
+    debug: var=zone_changes
 
   - debug:
-      msg: "item.item={{item.item}}, item.stdout={{item.stdout}}, item.changed={{item.changed}}"
+      msg: "item.item={{item.item}}, item.changed={{item.changed}}"
     loop: "{{ zone_changes.results}}"
 
   - name: did something change?
