--- a/roles/bind/tasks/primary.yml
+++ b/roles/bind/tasks/primary.yml
@@ -38,13 +38,14 @@
   - name: Static Zone file changes will cause new serial to be written
     template:
       src: serial.j2
-      dest: "{{ datapath }}/pri/{{ item.name }}/{{ item.name }}.serial"
+      dest: "{{ datapath }}/pri/{{ domain.item.name }}/{{ domain.item.name }}.serial"
       force: yes
       owner: "{{ binduser }}"
       group: "{{ binduser }}"
       mode: 0660
     when: "{{ item.changed == true }}"
     loop: "{{ zone_changes.results}}"
+      loop_var: domain
 
 
   - name: Copy Zone statement files for dynamic primary domains
