--- a/roles/bind/defaults/main.yml
+++ b/roles/bind/defaults/main.yml
@@ -45,6 +45,7 @@
     retry: 28800
     expire: 604800
     minimum: 86400
+  zone_file_path: 'templates' # the path to fine zone files. Having them outside of the role will prevent role upgrade issues.
   pri_domains:
     - { name: 'example.net', isstatic: 'no' }
     - { name: 'example.info', isstatic: 'no' }
