Default Zone statement fix
Changed simple zone statement template to support dynamic and static zone types. no longer need to create dedicate statement file for zones without additional configuration details

--- a/roles/bind/tasks/primary.yml
+++ b/roles/bind/tasks/primary.yml
@@ -60,7 +60,7 @@
       zone_statement:
         files:
           - "{{ item.name }}.zone.j2"
-          - local_signed_zone.j2
+          - simple.zone.j2
         paths:
           - "{{ zone_file_path }}"
           - 'templates'
