--- a/roles/bind/defaults/main.yml
+++ b/roles/bind/defaults/main.yml
@@ -45,7 +45,8 @@
     retry: 28800
     expire: 604800
     minimum: 86400
-  zone_file_path: 'templates' # the path to fine zone files. Having them outside of the role will prevent role upgrade issues.
+  zone_file_path: 'templates' # the path to find zone files. Having them outside of the role will prevent role upgrade issues. Also used for per - zone zone statement files.
+  conf_file_path: 'templates' # the path to find templated config files. Will not be used for per - zone configs.
   pri_domains:
     - { name: 'example.net', isstatic: 'no' }
     - { name: 'example.info', isstatic: 'no' }
