--- a/roles/bind/tasks/main.yml
+++ b/roles/bind/tasks/main.yml
@@ -2,7 +2,7 @@
   - name: Install isc-bind repo from COPR
     yum_repository:
       name: "COPR-ISC-{{ BindRelease }}"
-      description: COPR repo for BIND {{ BindRelease }} owned by ISC
+      description: COPR ISC repo for BIND {{ BindRelease }}
       baseurl: "https://copr-be.cloud.fedoraproject.org/results/isc/{{ BindRelease }}/epel-{{ ansible_distribution_major_version }}-{{ ansible_userspace_architecture }}/"
       gpgkey: "https://copr-be.cloud.fedoraproject.org/results/isc/{{ BindRelease }}/pubkey.gpg"
       gpgcheck: yes
@@ -43,10 +43,19 @@
 
   - name: Configure BIND Config file based on ServerRole
     template:
-      src: "{{ ServerRole }}-named.conf.j2"
+      src: {{ lookup('first_found', configuration_file) }}
+      # src: "{{ ServerRole }}-named.conf.j2"
       dest: "{{ confpath }}/named.conf"
       group: named
       backup: yes
+    vars:
+      configuration_file:
+        files:
+          - {{ ServerRole }}-named.conf.j2
+          - named.conf
+        paths:
+          - "{{ conf_file_path }}"
+          - 'templates'
     tags: isc-bind
     notify: reconfig isc-bind scl
 
