--- a/roles/bind/tasks/main.yml
+++ b/roles/bind/tasks/main.yml
@@ -21,6 +21,7 @@
     file:
       path: "{{ logpath }}"
       state: directory
+      user: "{{ binduser }}"
       group: "{{ binduser }}"
       mode: 0770
 
@@ -43,10 +44,11 @@
 
   - name: Configure BIND Config file based on ServerRole
     template:
-      src: {{ lookup('first_found', configuration_file) }}
+      src: "{{ lookup('first_found', configuration_file) }}"
       # src: "{{ ServerRole }}-named.conf.j2"
       dest: "{{ confpath }}/named.conf"
-      group: named
+      user: "{{ binduser }}"
+      group: "{{ binduser }}"
       backup: yes
     vars:
       configuration_file:
